--- a/.github/workflows/Snowflake_schemachange.yml
+++ b/.github/workflows/Snowflake_schemachange.yml
@@ -41,7 +41,7 @@ jobs:
           SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
         run: |
           echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          python --verion
+          python --version
           echo "Step 1: Installing schemachange"
           pip install schemachange
           
